# PhD-Dissertation

./: README.md
Chapter3/: README.md
Chapter3/Code/: ExtractEACSF.py
Chapter3/Code/ComputeICVFromSeg/: CMakeLists.txt  ComputeICVFromSeg.cxx~
Chapter3/Code/ComputeTBVFromSeg/: CMakeLists.txt  ComputeTBVFromSeg.cxx  ComputeTBVFromSeg.cxx~  EstimateCortexStreamlinesDensity.cxx~
Chapter3/Code/EditPolyData/: CMakeLists.txt  CMakeLists.txt~  EditPolyData.cxx  EditPolyData.cxx~  EstimateCSFDensity.cxx~  EstimatePolygonDensity.cxx~  EstimateSphericalDensity.cxx~  EstimateTublarDensity.cxx~  GenericDataObjectReader.cxx~
Chapter3/Code/Estimate1DCortexStreamlinesDensity/: CMakeLists.txt  CMakeLists.txt~  EstimateCortexStreamlinesDensity.cxx
Chapter3/Code/TransformPolyData/: CMakeLists.txt  TransformPolyData.cxx  TransformPolyData.cxx~
Chapter3/Code/joohwi/klaplace/: CMakeLists.txt  csv_parser.cpp  kgeometry.cpp  kgeometry.h  klaplace.h  kstreamtracer.h  kvolume.cpp  kvolume.h  kvtkutils.h  piOptions.cpp  piOptions.h
Chapter4/: README.md
Chapter4/Code/: Combining_All_Predictors.py
Chapter4/Models/: CT_2.h5  CT_4.h5  CT_5.h5  CT_6.h5  EACSF_0.h5  EACSF_1.h5  EACSF_3.h5  EACSF_4.h5  EACSF_9.h5  SA_1.h5  SA_3.h5  SA_4.h5  SA_6.h5  SA_7.h5  SA_8.h5  SA_9.h5  SCI_1.h5  SCI_4.h5  SCI_5.h5  SCI_6.h5  SCI_7.h5
Chapter4/Models/Combining_All_predictors/: Best_T.pkl  Best_weights.pkl  CT_0.h5  CT_1.h5  CT_3.h5  CT_7.h5  CT_8.h5  CT_9.h5  EACSF_2.h5  EACSF_5.h5  EACSF_6.h5  EACSF_7.h5  EACSF_8.h5  SA_0.h5  SA_2.h5  SA_5.h5  SCI_0.h5  SCI_2.h5  SCI_3.h5  SCI_8.h5  SCI_9.h5
Chapter5/: README.md
Chapter5/Code/CN_Vs_AD_CT/: Model_CN_Vs_AD.py
Chapter5/Code/CN_Vs_AD_SA/: Model_CN_Vs_AD.py
Chapter5/Code/ConvertToASCII/: CMakeLists.txt  CMakeLists.txt~  ConvertToASCII.cxx  ConvertToASCII.cxx~  GenerateSphericalParm.cxx~
Chapter5/Code/CopyVTKArray/: CMakeLists.txt  CMakeLists.txt~  CellLocator.cxx~  CopyVTKArray.cxx  CopyVTKArray.cxx~
Chapter5/Code/CopyVTKWithoutPointData/: CMakeLists.txt  CMakeLists.txt~  CopyVTKWithoutPointData.cxx  ShallowCopy.cxx~
Chapter5/Code/GeodesicsOnMeshes/: CMakeLists.txt  CMakeLists.txt~  Copyright.txt  License.txt
Chapter5/Code/GeodesicsOnMeshes/Scr/: CMakeLists.txt  GenerateSurfaceMask.cxx  GenerateSurfaceMask.cxx~  GeodesicPath.cxx~  GeodesicRings (copy).cxx  GeodesicRings.cxx  GeodesicRings.cxx~  GeodesicRings_V1.cxx  MultiResolutionSurfaceMappring (copy).cxx  MultiResolutionSurfaceMappring.cxx  MultiResolutionSurfaceMappring.cxx~  VisualizeGrid.cxx~
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/: GeodesicDistanceExample.cxx  GeodesicPathExample.cxx  GeodesicRings.cxx  Geodesicpath.cxx  Geodesicpath_other.cxx
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/No_Rays_Grid/: GeodesicRings.cxx  GeodesicRings.cxx~
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/V0/: GeodesicRings.cxx  GeodesicRings_0.cxx~
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/V1/: GeodesicRings.cxx
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/V1_No_Rays/: GeodesicRings.cxx  GeodesicRings.cxx~
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/V1_Rays/: GeodesicRings.cxx
Chapter5/Code/GeodesicsOnMeshes/Scr/Old/with_edges/: GeodesicRings.cxx
Chapter5/Code/RigidSurfaceAlignment/: CMakeLists.txt  CMakeLists.txt~  IterativeClosestPointsTransform.cxx~  MapTemplateSurfaces.cxx~  RigidSurfaceAlignment.cxx  RigidSurfaceAlignment.cxx~
Chapter5/Code/conformalMapping/: CMakeLists.txt  CMakeLists.txt~  mapToSphere.cxx  myConformalFlatteningMeshFilter.h  myConformalFlatteningMeshFilter.h~  myConformalFlatteningMeshFilter.txx  myConformalFlatteningMeshFilter.txx~
Chapter6/: README.md
Chapter6/Models/: README.md
Chapter7/: README.md
Chapter7/Code/: README.md
Chapter7/Models/: README.md  Trained_Models_Link.md
(+105 files in other folders)
